# fabric

./: .gitignore  .gitmodules  CMakeLists.txt  DistrhoPluginInfo.h  Grain.cpp  Grain.hpp  GrainPlayer.cpp  GrainPlayer.hpp  README.md  ROADMAP.md  fabricButton.cpp  fabricButton.hpp  fabricController.cpp  fabricController.hpp  fabricDSP.cpp  fabricDSP.hpp  fabricEnvelopeDisplay.cpp  fabricEnvelopeDisplay.hpp  fabricGrainMeter.cpp  fabricGrainMeter.hpp  fabricMaths.hpp  fabricParamSmooth.hpp  fabricParameters.hpp  fabricUI.cpp  fabricUI.hpp  fabricWaveformDisplay.cpp  fabricWaveformDisplay.hpp
.github/workflows/: build.yml
Resources/Fonts/: chivo_bold.hpp
Resources/Fonts/src/: chivo_bold.cpp
widgets/: NanoKnob.hpp  NanoLabel.hpp  VolumeKnob.hpp
widgets/src/: NanoKnob.cpp  NanoLabel.cpp  VolumeKnob.cpp  WolfWidget.cpp
